rendered/envs/zoo/longhorn-system/ingress-longhorn.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    a8r.io/repository: git@github.com:kbudde/lab.git
  name: longhorn
  namespace: longhorn-system
spec:
  rules:
    - host: longhorn.zoo.budd.ee
      http:
        paths:
          - backend:
              service:
                name: longhorn-frontend
                port:
                  number: 80
            path: /
            pathType: ImplementationSpecific
